modularity/compiling_error.txt
C:\Dropbox\CPlusPlus\Github\cplusplus\modularity\const_pointer.c++: In function 'int main()':
C:\Dropbox\CPlusPlus\Github\cplusplus\modularity\const_pointer.c++:5:4: error: increment of read-only variable 'i'
   i++; //error, increment of readonly
    ^~
